some fixed align header title

--- a/assets/header-custom.css
+++ b/assets/header-custom.css
@@ -122,6 +122,7 @@
     font-size: 24px;
     line-height: 32px;
     color: #242528;
+    text-align: left;
     /* margin-bottom: 8px; */
     min-height: calc(1em * 2);
 }
